# book-alexa-right

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  PROGRESS.md  README.md  WORKFLOW_UPDATE_v2.md  docs-requirements.txt  leak.md  merge_scenes.py  mkdocs.yml  pyproject.toml  pytest.ini
.claude/: hooks.json  settings.local.json
.workflows/: agents-reference.md  generation-v2.0-backup.md  generation.md  integration.md  planning.md  prose-style-guide.md  scene-generation-workflow-v2.md  testing-checklist.md
bible-manager/: bible-manager-specs.md  canon-levels-table-example.md  canon-levels-table.md  canon-rules-prompt.md  create-roadmap.py  system-requirements.md  workflow-concept.md  world-bible-prompt.md  worldbuilding-bible-example.md  worldbuilding-prompt.md
canon/: README.md  lvl0.md  lvl2.md  lvl3.md  negative.md
docs/: README.md  emergency-recovery.md  index.md  tags.md
features/: 0001 - ИЛЛЮЗИЯ КОНТРОЛЯ (Ложная реальность).md  LOR001 - Олдеры.md
mcp-servers/: .gitignore  README.md  claude-code-config.example.json  generation_state_mcp.py  planning_state_schema.sql  planning_state_utils.py  pyproject.toml  requirements.txt  session_management_mcp.py  session_models.py  session_utils.py  workflow_models.py  workflow_orchestration_mcp.py  workflow_utils.py
mcp-servers/tests/: README.md  evaluation.xml  test_planning_state.py
mcp-servers/tests/test-states/: generation-state-0101.json  generation-state-0202.json  generation-state-0303.json
tests/: README.md  __init__.py  conftest.py
workspace/: CLEANUP-REPORT.md  IMPROVEMENT-PLAN.md  README.md  (+1 more)
(+264 files in other folders)
